--- a/MultiButtons_BLSEngine.html
+++ b/MultiButtons_BLSEngine.html
@@ -2,7 +2,7 @@
 <html lang="tr">
 <head>
 <meta charset="UTF-8">
-<title>SoraClient – Smooth UI V6</title>
+<title>SoraClient</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>
 :root{
